Really fixed the CSS to avoid flickering ont Chrome.

--- a/src/stylesheets/tipsy.css
+++ b/src/stylesheets/tipsy.css
@@ -1,12 +1,77 @@
-.tipsy { padding: 5px; font-size: 10px; position: absolute; z-index: 100000; }
-  .tipsy-inner { padding: 5px 8px 4px 8px; background-color: #000; color: #fff; max-width: 200px; text-align: center; }
-  .tipsy-inner { border-radius: 3px; -moz-border-radius:3px; -webkit-border-radius:3px; }
-  .tipsy-arrow { position: absolute; width: 0; height: 0; border: 9px solid transparent; border-color: transparent transparent #000; }
-  .tipsy-n .tipsy-arrow { top: -9px; left: 50%; width: 0; height: 0; margin-left: -9px;  }
-    .tipsy-nw .tipsy-arrow { top: -9px; left: 10px; }
-    .tipsy-ne .tipsy-arrow { top: -9px; right: 10px; }
-  .tipsy-s .tipsy-arrow { bottom: -9px; left: 50%; margin-left: -9px; border-color: #000 transparent transparent; }
-    .tipsy-sw .tipsy-arrow { bottom: -9px; left: 10px; border-color: #000 transparent transparent; }
-    .tipsy-se .tipsy-arrow { bottom: -9px; right: 10px; border-color: #000 transparent transparent; }
-  .tipsy-e .tipsy-arrow { top: 50%; margin-top: -9px; right: -9px; border-color: transparent transparent transparent #000; }
-  .tipsy-w .tipsy-arrow { top: 50%; margin-top: -9px; left: -9px; border-color: transparent #000 transparent transparent; }
+.tipsy {
+  font-size: 10px;
+  font-family: "Lucida Grande", "Lucida Sans", "Segoe UI", "Calibri", "Sans", Tahoma, Verdana, Arial, Sans-Serif !important;
+  position: absolute;
+  padding: 5px;
+  z-index: 100000;
+}
+
+.tipsy-inner {
+  background-color: #000;
+  color: #FFF;
+  max-width: 200px;
+  text-align: center;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  padding: 5px 8px 4px;
+}
+
+.tipsy-arrow {
+  position: absolute;
+  width: 0;
+  height: 0;
+}
+
+.tipsy-n .tipsy-arrow,
+.tipsy-nw .tipsy-arrow,
+.tipsy-ne .tipsy-arrow {
+  top: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid black;
+}
+
+.tipsy-s .tipsy-arrow,
+.tipsy-sw .tipsy-arrow,
+.tipsy-se .tipsy-arrow {
+  bottom: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid black;
+}
+
+.tipsy-n .tipsy-arrow,
+.tipsy-s .tipsy-arrow {
+  left: 50%;
+}
+
+.tipsy-nw .tipsy-arrow,
+.tipsy-sw .tipsy-arrow {
+  left: 10px;
+}
+
+.tipsy-ne .tipsy-arrow,
+.tipsy-se .tipsy-arrow {
+  right: 10px;
+}
+
+.tipsy-e .tipsy-arrow,
+.tipsy-w .tipsy-arrow {
+  top: 50%;
+  margin-top: -5px;
+}
+
+.tipsy-e .tipsy-arrow {
+  right: 0;
+  border-top: 5px solid transparent;
+  border-left: 5px solid black;
+  border-bottom: 5px solid transparent;
+}
+
+.tipsy-w .tipsy-arrow {
+  left: 0;
+  border-top: 5px solid transparent;
+  border-right: 5px solid black;
+  border-bottom: 5px solid transparent;
+}
